# Waveform-Timing-2.0

./: .gitignore  Makefile  README.md  README.org  enviroment.yml  outline.md  outline.txt  pyproject.toml
scripts/: B0_in_V1234.py  Solitary_Waves.py  Wave_Train.py  Wave_Train_Finder.py  \
src/wave_timing/: calc.py  utils.py
src/wave_timing/.ipynb_checkpoints/: calc-checkpoint.py
src/wave_timing/diagnostics/: waveform_plot.py
src/wave_timing/math/: analysis.py  geometry.py  trig.py
src/wave_timing/signal/: calc.py  delay.py  operation.py
src/wave_timing/utils/: data.py  directory.py
tests/: angle_btw.ipynb  frequency_filter.ipynb  frequency_filter.py  get_data.ipynb  get_data.py  peak_to_peak.ipynb  sliding_fft.ipynb  tests.py  x_corr.ipynb
tests/.ipynb_checkpoints/: derivitive-checkpoint.ipynb  divisible-checkpoint.ipynb  filter-checkpoint.ipynb  find_pks_and_trh-checkpoint.ipynb  frequency_filter-checkpoint.py  get_data-checkpoint.ipynb  multiple_delays-checkpoint.ipynb  peak_to_peak-checkpoint.ipynb  sample_rate-checkpoint.ipynb  sliding_fft-checkpoint.ipynb  wave_velocity-checkpoint.ipynb
