[tool.poetry]
name = "wave_timing"
version = "0.1.0"
description = "Timing of Plasma Waves Detected by PSP"
authors = ["Jack Redepenning <Redep028@umn.edu>"]
readme = "README.md"
packages = [
    { include = "wave_timing", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
cdflib = "^0.4.0"
numpy = "^1.25"
scipy = "^1.11.0"
pandas = "^2.1.0"
astropy = "^5.3.1"
matplotlib = "^3.5.0"
pyspedas = {git = "https://github.com/JackRedds/pyspedas.git"}

