[project]
name = "wave_timing"
version = "0.1.0"
description = "Timing of Plasma Waves Detected by PSP"
authors = [
    {name = "Jack Redepenning", email = "Redep028@umn.edu"},
]
requires-python = ">=3.9"
readme = "README.org"
packages = [
    { include = "wave_timing", from = "src" }
]
dependencies = [
    "cdflib>=0.4.0",
    "numpy>=1.25",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "astropy>=6.0.0",
    "matplotlib>=3.5.0",
    "pyspedas @ git+https://github.com/JackRedds/pyspedas.git",
]
